solved blaze stubbing issues; added calculateScore()